fix chat log spacing

--- a/app/assets/stylesheets/app/main/chat/chat_window.scss
+++ b/app/assets/stylesheets/app/main/chat/chat_window.scss
@@ -8,7 +8,7 @@
 
 .chat-log {
   position: absolute;
-  padding: 17px 0;
+  padding: 26px 0;
   max-height: 100%;
   width: 100%;
   bottom: 0px;
